<resources>
    <string name="app_name">Cadastro de Pessoas</string>
    <string name="pf">Pessoa Fisica</string>
    <string name="pj">Pessoa Juridica</string>
    <string name="cnpj">CNPJ</string>
    <string name="cpf">CPF</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="cadatrar">Cadastrar</string>
    <string name="escolha">Escolha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>